2005-04-22  David Malcolm  <dmalcolm@redhat.com>

	* cong-document.c: 
	* cong-command.h: 
	* cong-command.c: 
	* cong-app.c: 

	More API documentation

2005-04-21  David Malcolm  <dmalcolm@redhat.com>

	* cong-document.c: 

	Added API documentation for cong_document_for_each_node

2005-04-14  David Malcolm  <dmalcolm@redhat.com>

	* plugin-random.c 
	* Makefile.am:
	* cong-random-document.c: 
	* cong-random-document.h: 
	Refactored bulk of plugin-random.c into new
	cong-random-document.[hc], in the hope of making it easier to run
	standalone for doing Yelp unit-testing	

2005-04-09  David Malcolm  <dmalcolm@redhat.com>

	* tree.c: 
	* popup.c: 
	* cong-ui-hooks.h: 
	* cong-editor-node-entity-ref.c: 
	* cong-editor-node-entity-decl.c: 
	First attempt at adding entity refactoring: convert an entity
	reference to a copy (via context menu)	

2005-04-08  David Malcolm  <dmalcolm@redhat.com>

	* plugin-debug.c: 
	Fix warning when plugin is disabled

2005-04-05  David Malcolm  <dmalcolm@redhat.com>

	* cong-util.h: 
	* cong-util.c: 
	Added various utility functions to make it easier to create XML
	files programatically.

	* plugin-debug.c: 
	* cong-fake-plugin-hooks.h: 
	* cong-fake-plugin-hooks.c: 
	* cong-editor-widget3.c: 
	* cong-editor-widget.h: 
	* cong-editor-area.h: 
	* cong-editor-area.c: 
	Added new debug plugin (must be enabled with
	--enable-debug-plugin=yes), which adds a debug item to the Tools
	menu to dump the CongEditorArea tree as XML (and open the
	resulting file).

	* cong-command.c: fixed some API documentation

2005-04-05  David Malcolm  <cmalcolm@redhat.com>

	* Makefile.am: 
	

2005-03-31  David Malcolm  <dmalcolm@redhat.com>

	* cong-app.c, cong-attribute-editor-enumeration.c,
	cong-attribute-editor-nmtoken.c, cong-attribute-editor.c,
	cong-attribute-wrapper.c, cong-command.c, cong-command.h,
	cong-debug-log-view.c, cong-dispspec-element-gxx.h,
	cong-dispspec-element.c, cong-dispspec-registry.c,
	cong-dispspec.c, cong-document.c, cong-document.h,